[package]
name = "chif"
version = "0.1.0"
edition = "2024"

[dependencies]
# appcui = "0.4.12"
# duct = "1.1.1"
clap = { version = "4.5", features = ["derive"] }
log = "0.4.33"
serde = {version="1.0", features=["derive"]}
serde_json = {version="1.0"}
# superlighttui = "0.22.2"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features=["env-filter", "fmt"]}
